<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>fr.excilys</groupId>
	<artifactId>computer-database</artifactId>
	<version>2.0.0</version>
	<packaging>pom</packaging>
	<properties>
		<mysql-version>6.0.6</mysql-version>
		<junit-version>4.12</junit-version>
		<mockito-all-version>1.9.5</mockito-all-version>
		<slf4j-api-version>1.7.25</slf4j-api-version>
		<ibatis-sqlmap-version>2.3.4.726</ibatis-sqlmap-version>
		<javax.servlet-api-version>3.0.1</javax.servlet-api-version>
		<jstl-version>1.2</jstl-version>
		<hikari-version>2.7.2</hikari-version>
		<slf4j.version>1.6.4</slf4j.version>
		<logback.version>1.2.3</logback.version>
		<springframework-version>5.0.0.RELEASE</springframework-version>
		<javax-validation-version>2.0.0.Final</javax-validation-version>
		<hibernate-validator-version>5.4.1.Final</hibernate-validator-version>
		<hibernate.version>5.2.10.Final</hibernate.version>
		<projet-version>2.0.0</projet-version>
		<jackson-version>2.9.0</jackson-version>
		<spring-security-version>4.2.3.RELEASE</spring-security-version>
	</properties>

	<dependencyManagement>
		<dependencies>

			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-databind</artifactId>
				<version>${jackson-version}</version>
			</dependency>

			<dependency>
				<groupId>fr.excilys</groupId>
				<artifactId>utils
				</artifactId>
				<version>${projet-version}</version>
			</dependency>
			<dependency>
				<groupId>fr.excilys</groupId>
				<artifactId>core</artifactId>
				<version>${projet-version}</version>
			</dependency>
			<dependency>
				<groupId>fr.excilys</groupId>
				<artifactId>persistence</artifactId>
				<version>${projet-version}</version>
			</dependency>
			<dependency>
				<groupId>fr.excilys</groupId>
				<artifactId>webapp</artifactId>
				<version>${projet-version}</version>
			</dependency>
			<dependency>
				<groupId>fr.excilys</groupId>
				<artifactId>service</artifactId>
				<version>${projet-version}</version>
			</dependency>
			<dependency>
				<groupId>fr.excilys</groupId>
				<artifactId>binding</artifactId>
				<version>${projet-version}</version>
			</dependency>

			<dependency>
				<groupId>mysql</groupId>
				<artifactId>mysql-connector-java</artifactId>
				<version>${mysql-version}</version>
			</dependency>

			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>${junit-version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.mockito</groupId>
				<artifactId>mockito-all</artifactId>
				<version>${mockito-all-version}</version>
				<scope>test</scope>
			</dependency>

			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>${slf4j-api-version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.ibatis</groupId>
				<artifactId>ibatis-sqlmap</artifactId>
				<version>${ibatis-sqlmap-version}</version>
			</dependency>
			<dependency>
				<groupId>javax.servlet</groupId>
				<artifactId>javax.servlet-api</artifactId>
				<version>${javax.servlet-api-version}</version>
			</dependency>
			<dependency>
				<groupId>javax.servlet</groupId>
				<artifactId>jstl</artifactId>
				<version>${jstl-version}</version>
			</dependency>
			<dependency>
				<groupId>com.zaxxer</groupId>
				<artifactId>HikariCP</artifactId>
				<version>${hikari-version}</version>
				<scope>compile</scope>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-webmvc</artifactId>
				<version>${springframework-version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-jdbc</artifactId>
				<version>${springframework-version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-tx</artifactId>
				<version>${springframework-version}</version>
			</dependency>
			<dependency>
				<groupId>ch.qos.logback</groupId>
				<artifactId>logback-classic</artifactId>
				<version>${logback.version}</version>
			</dependency>
			<dependency>
				<groupId>org.hibernate</groupId>
				<artifactId>hibernate-validator</artifactId>
				<version>${hibernate-validator-version}</version>
			</dependency>

			<dependency>
				<groupId>org.springframework.security</groupId>
				<artifactId>spring-security-core</artifactId>
				<version>${spring-security-version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework.security</groupId>
				<artifactId>spring-security-config</artifactId>
				<version>${spring-security-version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework.security</groupId>
				<artifactId>spring-security-web</artifactId>
				<version>${spring-security-version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>
	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.7.0</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-war-plugin</artifactId>
				<version>3.0.0</version>
				<configuration>
					<warSourceDirectory>WebContent</warSourceDirectory>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-checkstyle-plugin</artifactId>
				<version>2.17</version>
				<configuration>
					<configLocation>config/checkstyle/checkstyle.xml</configLocation>
					<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<reporting>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-checkstyle-plugin</artifactId>
				<version>2.17</version>
				<reportSets>
					<reportSet>
						<reports>
							<report>checkstyle</report>
						</reports>
					</reportSet>
				</reportSets>
			</plugin>
		</plugins>
	</reporting>
	<modules>
		<module>utils</module>
		<module>core</module>
		<module>binding</module>
		<module>persistence</module>
		<module>service</module>
		<module>webapp</module>
		<module>rest</module>
	</modules>
</project>
